전체적인 구조 수정